test-utils/derive/tests/too-many-func-parameters.stderr
error: the test function accepts only one argument of type sc_service::TaskExecutor
  --> $DIR/too-many-func-parameters.rs:22:1
   |
22 | async fn too_many_func_parameters(task_executor_1: TaskExecutor, task_executor_2: TaskExecutor) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `sc_service::TaskExecutor`
  --> $DIR/too-many-func-parameters.rs:19:5
   |
19 | use sc_service::TaskExecutor;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default
